fix overflow with transform

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,8 +367,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 21px;
     color: #000;
-    overflow-x: hidden;
     height: 100%;
+    overflow-x: hidden;
 }
 
 html {
@@ -390,6 +390,7 @@ html {
     flex-direction: column;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    overflow-x: hidden;
 }
 
 .container {
@@ -706,7 +707,6 @@ a {
 }
 
 .section__img {
-    height: 450px;
     border-radius: 50px;
     opacity: 0;
     -webkit-transform: translate(50%, 0);
@@ -911,6 +911,10 @@ a {
     .gallery__content {
         width: 80%;
         margin-bottom: 50px;
+    }
+
+    .gallery .gallery__title {
+        margin-bottom: 20px;
     }
 
     .gallery__item {
